Added a lot of things. Can`t detail now because graphical interface of the linux has crashed. Just saving everything here.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "material-ui": "^0.18.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-dropzone": "^3.13.2",
+    "react-image-crop": "^2.0.5",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
@@ -33,7 +35,11 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "hologram-image-upload": "^2.1.3",
     "jest": "^20.0.4",
+    "style-loader": "^0.18.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
   }
