--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   "dependencies": {
     "lodash": "^4.17.4",
     "material-ui": "^0.18.3",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-dropzone": "^3.13.2",
     "react-image-crop": "^2.0.5",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.6.0",
+    "redux": "^3.7.0",
     "redux-logger": "^3.0.6"
   },
   "devDependencies": {
@@ -40,6 +40,7 @@
     "hologram-image-upload": "^2.1.3",
     "jest": "^20.0.4",
     "style-loader": "^0.18.2",
+    "to-string-loader": "^1.1.5",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
   }
