--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.7.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
